module(
    name = "closure_templates",
    version = "0.0.0-2022-10-26",
    compatibility_level = 1,
    repo_name = "com_google_template_soy",
)

bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

#####################################################################
# rules_jvm_external
#####################################################################

SERVER_URLS = [
    "https://mirror.bazel.build/repo1.maven.org/maven2",
    "https://repo1.maven.org/maven2",
]

maven.artifact(
    # testonly = True,
    artifact = "guava-testlib",
    group = "com.google.guava",
    version = "31.1-jre",
)
maven.artifact(
    # testonly = True,
    artifact = "truth",
    group = "com.google.truth",
    version = "1.1.3",
)
maven.artifact(
    # testonly = True,
    artifact = "truth-java8-extension",
    group = "com.google.truth.extensions",
    version = "1.1.3",
)
maven.artifact(
    # testonly = True,
    artifact = "junit",
    group = "junit",
    version = "4.13.2",
)

# maven.override(
#     coordinates = "com.google.auto.value:auto-value",
#     target = "@com_google_auto_value_auto_value",
# )
# maven.override(
#     coordinates = "com.google.auto.value:auto-value-annotations",
#     target = "@com_google_auto_value_auto_value_annotations",
# )
# maven.override(
#     coordinates = "com.google.protobuf:protobuf-java",
#     target = "@com_google_protobuf//:protobuf_java",
# )
maven.install(
    artifacts = [
        "args4j:args4j:2.33",
        "com.google.auto.value:auto-value:1.9",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.9.0",
        "com.google.common.html.types:types:1.0.8",
        "com.google.errorprone:error_prone_annotations:2.14.0",
        "com.google.escapevelocity:escapevelocity:0.9.1",
        "com.google.flogger:flogger-system-backend:0.7.4",
        "com.google.flogger:flogger:0.7.4",
        "com.google.flogger:google-extensions:0.7.4",
        "com.google.guava:guava:31.1-jre",
        "com.google.inject:guice:5.1.0",
        "com.ibm.icu:icu4j:71.1",
        "javax.inject:javax.inject:1",
        "net.java.dev.javacc:javacc:6.1.2",
        "org.apache.ant:ant:1.10.12",
        "org.json:json:20211205",
        "org.ow2.asm:asm-commons:9.3",
        "org.ow2.asm:asm-tree:9.3",
        "org.ow2.asm:asm-util:9.3",
        "org.ow2.asm:asm:9.3",
    ],
    lock_file = "//:maven_install.json",
    repositories = SERVER_URLS,
    strict_visibility = True,
)
use_repo(maven, "maven", "unpinned_maven")

# soy = use_extension("@closure_templates//:extensions.bzl", "soy")
# soy.annotate(
#   name = "soy_annotate"
# )
# use_repo(soy)
